# Blynde

./: .gitignore  Notes.md  README.md  errors.md  index.html  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
client/: .env  README.md  package.json
server/: .gitignore  README.md  data.json  manage.py  products.json  pyproject.toml  requirements.txt
server/Blynde/: asgi.py  base.py  urls.py  wsgi.py
server/Blynde/settings/: local.py  production.py
server/Mbase/: admin.py  apps.py  filters.py  forms.py  models.py  pagination.py  permissions.py  serializers.py  signals.py
server/Mbase/migrations/: 0001_initial.py  0002_remove_discountoffers_thumbnail_and_more.py
server/Mbase/mixins/: imagekit.py
server/Mbase/urls/: auth_urls.py  order_urls.py  product_urls.py  user_urls.py
server/Mbase/views/: auth_views.py  order_views.py  product_views.py  user_views.py
server/templates/email/: template1.html  template1.txt
src/: App.tsx  index.css  main.tsx
src/components/: BreadCrumbs.tsx  CheckoutSteps.tsx  ErrorBoundary.tsx  Message.tsx  Modal.tsx  PageContainer.tsx  Paginate.tsx  Rating.tsx  Spinner.tsx  code-snippet.tsx
src/helpers/: lazyLoad.tsx  utils.ts
src/hooks/: useAuth.ts  useFetchData.ts  useLocalStorage.ts  useOffers.ts  useOrders.ts  useProductReviews.ts  useProducts.ts  useWishlist.ts
src/layouts/: RootLayout.tsx  index.tsx
src/lib/: api.ts  authApi.ts  axiosClient.ts  orderApi.ts  productApi.ts  reviewApi.ts  userApi.ts
src/pages/: CartScreen.tsx  CompareScreen.tsx  EsewaPaymentForm.tsx  OrderScreen.tsx  (+9 more)
(+193 files in other folders)
