[tool.poetry]
name = "blynde"
version = "0.1.0"
description = ""
authors = ["Sameer Shahi Thakuri (Sam) <70689865+Sam231221@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.5"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
django-cors-headers = "^4.6.0"
django-filter = "^24.3"
dj-database-url = "^2.3.0"
python-decouple = "^3.8"
python-dotenv = "^1.0.1"
pillow = "^11.1.0"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
whitenoise = "^6.8.2"
imagekitio = "^4.1.0"
requests = "^2.32.3"
requests-toolbelt = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
